--- a/web-container.yaml
+++ b/web-container.yaml
@@ -29,7 +29,7 @@
 
     - name: "Deploy WAR File"
       copy:
-        remote_src: "{{gitdir}}"
+        src: "{{gitdir}}/target/addressbook-2.0.war"
         dest: "/var/lib/tomcat9/webapps/addressbook.war"
     
     - name: "Stop tomcat"
