--- a/web-container.yaml
+++ b/web-container.yaml
@@ -29,8 +29,9 @@
 
     - name: "Deploy WAR File"
       copy:
-        remote_src: "{{gitdir}}/target/addressbook-2.0.war"
+        src: "{{gitdir}}/target/addressbook-2.0.war"
         dest: "/var/lib/tomcat9/webapps/addressbook.war"
+        remote_src: "yes"
     
     - name: "Stop tomcat"
       service: 
